Add active class

--- a/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
+++ b/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
@@ -33,7 +33,14 @@
          }
 
          a{
-             color:$gray-900;
+            
+             color:$gray-600;
+             font-weight: 500;
+             margin-left:4px;
+
+             &::visited,&::active,&::focus{
+                color:$gray-900;
+             }
          }
      }
 
