--- a/packages/apps/admin/src/container/AppointmentLog/appointment-log.scss
+++ b/packages/apps/admin/src/container/AppointmentLog/appointment-log.scss
@@ -22,6 +22,12 @@
             &:last-child {
                 margin-right: 0;
             }
+
+            .badge-data{
+                color:$gray-600;
+                font-weight: 500;
+                margin-left:4px;
+            }
         }
 
     }
@@ -34,10 +40,10 @@
         // transform  :translate(-50%,-50%);
         text-align    : center;
         vertical-align: middle;
-        font-size     : 12px;
+        font-size     : 0.8rem;
         line-height   : 20px;
         padding       : 2px 6px;
-        @include border-radius(40px);
+        @include border-radius(4px);
     }
 
     .react-datepicker-wrapper {
