dashboard button pill issues

--- a/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
+++ b/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
@@ -38,7 +38,7 @@
              font-weight: 500;
              margin-left:4px;
 
-             &::visited,&::active,&::focus{
+             &.active{
                 color:$gray-900;
              }
          }
