--- a/packages/apps/admin/src/container/AppointmentLog/appointment-log.scss
+++ b/packages/apps/admin/src/container/AppointmentLog/appointment-log.scss
@@ -43,6 +43,7 @@
         font-size     : 0.8rem;
         line-height   : 20px;
         padding       : 2px 6px;
+        text-transform: uppercase;
         @include border-radius(4px);
     }
 
