--- a/packages/common-sass/src/scss/custom-components/_aggrid.scss
+++ b/packages/common-sass/src/scss/custom-components/_aggrid.scss
@@ -116,7 +116,7 @@
   }
 
   .ag-cell{
-      text-transform:lowercase;
+      text-transform:uppercase;
   }
 
 //   .ag-theme-balham .ag-ltr .ag-cell 
@@ -137,3 +137,15 @@
 
 
 //   }
+
+.data-image {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    overflow: hidden;
+
+    img{
+        width: 40px;
+    height: 40px;
+    }
+}
