--- a/packages/common-sass/src/scss/custom-components/_aggrid-action.scss
+++ b/packages/common-sass/src/scss/custom-components/_aggrid-action.scss
@@ -14,7 +14,7 @@
         &:focus,
         &:hover {
             outline   : 0;
-            box-shadow: 0 0 2px 5px $cogent-border;
+            //box-shadow: 0 0 2px 5px $cogent-border;
         }
 
         &::after {
