--- a/packages/apps/client/src/container/AdminSetup/admin-setup.scss
+++ b/packages/apps/client/src/container/AdminSetup/admin-setup.scss
@@ -133,5 +133,15 @@
     padding-right: 10px;
 }
 
+.login-page-title{
+    display: none;
+}
+
+.reset-password{
+    .login-page-title{
+        display:none;
+    }
+}
+
 
 
