--- a/packages/apps/admin/src/container/AppointmentLog/appointment-log.scss
+++ b/packages/apps/admin/src/container/AppointmentLog/appointment-log.scss
@@ -33,16 +33,16 @@
     }
 
     .badge {
-        width         : 35px;
+        width         : auto;
         height        : auto;
         // top        :50%;
         // left       :50%;
         // transform  :translate(-50%,-50%);
         text-align    : center;
         vertical-align: middle;
-        font-size     : 0.8rem;
-        line-height   : 20px;
-        padding       : 2px 6px;
+        font-size     : 0.65rem;
+        line-height   : 0.8rem;
+        padding       : 6px 8px;
         text-transform: uppercase;
         @include border-radius(4px);
     }
