--- a/packages/common-sass/src/scss/pages/_dashboard.scss
+++ b/packages/common-sass/src/scss/pages/_dashboard.scss
@@ -435,6 +435,18 @@
         }
          
       }
+
+      .app-queue-datatable{
+          width:100%;
+
+          .data-image{
+            //   width:25px;
+          }
+
+          ul li{
+              line-height: 22px;
+          }
+      }
     
    
 }
