--- a/packages/common-sass-client/src/scss/variables/_custom-variables.scss
+++ b/packages/common-sass-client/src/scss/variables/_custom-variables.scss
@@ -1,6 +1,6 @@
 // Brand Colors
 $cogent-accent :   #4bd6f2 !default;
-$cogent:         #0063ff !default;
+$cogent:         #4c9eae !default;
 //$cogent:      #0d5dae !default;
 $facebook:       #3b5998 !default;
 $twitter:        #00aced !default;
