--- a/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
+++ b/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
@@ -15,6 +15,8 @@
     }
 }
 
+
+
  .appointment-badge{
     float: right;  
     margin:10px 0;
@@ -73,21 +75,68 @@
     // padding-left: 4px;
 }
 
-.doctor-name{
-    position: relative;
+}
 
+.doctor-image{
+    width:100px;
+    height:100px;
+    margin-top:10px;
+    background-color:$gray-500;
+    @include border-radius(50%);
+    // display: inline-block;
+}
+
+.doctor-details{
+    position: relative;
     display: inline-block;
+    margin-top:10px;
     margin-bottom:20px;
-     &::before{
-        content:"";
-        display: block;
-        position: absolute;
-        width:100%;
-        height:2px;
-        bottom:-5px;
-        background-color:$gray-600;
+    color:$gray-700;
+    font-size:0.8rem;
+    text-transform: capitalize;
+    letter-spacing: 0.02rem;
+
+    //  &::before{
+    //     content:"";
+    //     display: block;
+    //     position: absolute;
+    //     width:100%;
+    //     height:2px;
+    //     bottom:-5px;
+    //     background-color:$gray-600;
+    // }
+
+    span{
+        font-size: 0.9rem;
+        font-weight: 600;
+        letter-spacing: 0.02rem;
     }
    
+}
+
+.patient-details{
+    display: inline-block;
+    margin-top:10px;
+    margin-bottom:20px;
+    color:$gray-700;
+    font-size:0.8rem;
+    line-height: 1.6rem;
+    text-transform: capitalize;
+    letter-spacing: 0.02rem;
+
+    i{
+       margin-right:4px;
+       color:$gray-900;
+    }
+}
+
+.btn-checkin{
+    width:100%;
+    padding:6px 0  !important;
+    margin-top:20px;
+    i{
+        color:$white;
+    }
 }
 
 .time-container{
@@ -97,7 +146,7 @@
         margin-bottom:16px;
 
         .btn{
-            width:100px;
+            width:116px;
             height: 36px;
         }
 
@@ -110,7 +159,43 @@
 }
 
 .appointment-status-list{
-    margin: 15px -30px;
+    margin: 15px -30px 45px;
+    border-bottom:1px solid $gray-200;
+
+
+.title{
+    position: relative;
+    display: inline-block;
+    margin-top:10px;
+    margin-bottom:20px;
+    color:$gray-700;
+    font-size:0.8rem;
+    text-transform: capitalize;
+
+     &::before{
+        content:"";
+        display: block;
+        position: absolute;
+        width:55%;
+        height:1px;
+        bottom:-5px;
+        background-color:$gray-600;
+    }
+
+    
+    
+}
+
+.day-off{
+    width:100%;
+    text-align: center;
+
+    .fa{
+        font-size: 40px !important;
+       display: block;
+       color:$danger;
+
+    }
 }
 
 .appointment-status-list,.appointment-badge{
@@ -118,8 +203,7 @@
         // background-color: adjust-hue($success,20%);
 
         background-color:$spotify;
-        color:#191414;
-       
+        color:$gray-800;
         padding:8px 12px;
         // margin: 0 0 12px;
     }
