--- a/packages/common-sass/src/scss/pages/_profile-setup.scss
+++ b/packages/common-sass/src/scss/pages/_profile-setup.scss
@@ -61,6 +61,7 @@
             position: absolute;
             right   : 0;
             width   : 40px;
+            margin-top:0;
 
             &.form-check .form-check-label:before {
                 margin-left: -4px;
