--- a/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
+++ b/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
@@ -187,11 +187,12 @@
 }
 
 .day-off{
-    width:100%;
+    // width:100%;
     text-align: center;
+    display: inline-block;
 
     .fa{
-        font-size: 40px !important;
+        font-size: 42px !important;
        display: block;
        color:$danger;
 
