appointment queue design issue

--- a/packages/common-sass/src/scss/pages/_dashboard.scss
+++ b/packages/common-sass/src/scss/pages/_dashboard.scss
@@ -36,7 +36,7 @@
 
     .hospital-list{
         width:300px;
-        float:right;
+        float:left;
 
         .hospital-list-input{
             position: relative;
