--- a/packages/common-sass/src/scss/pages/_dashboard.scss
+++ b/packages/common-sass/src/scss/pages/_dashboard.scss
@@ -36,7 +36,7 @@
 
     .hospital-list{
         width:300px;
-        float:left;
+        float:right;
 
         .hospital-list-input{
             position: relative;
