--- a/packages/apps/admin/src/container/HospitalSetup/hospitalHoc.scss
+++ b/packages/apps/admin/src/container/HospitalSetup/hospitalHoc.scss
@@ -42,8 +42,38 @@ h5.title{
     width:140px;
 }
 
+.hospital-banner-container{
+    width:100%;
+    height:240px;
+    position: relative;
+    display: block;
+    background-color:lighten($cogent,46%);
+    margin-bottom:32px; 
+    overflow: hidden;
+    @include border-radius(10px);
+
+    .hospital-banner{
+        width:100%;
+    }
+
+    .banner-upload-button{
+        position:absolute;
+        right:15px;
+        bottom:10px;
+    }
+
+    .react-photo-gallery--gallery{
+    
+    }
+}
+
 .image-upload-container{
   text-align: center;
+  position: absolute;
+  top:14px;
+  left:14px;
+
+  
 
     .image-box{
        img{
