--- a/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
+++ b/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
@@ -42,9 +42,13 @@
              color:$gray-600;
              font-weight: 500;
              margin-left:4px;
+             padding:0 2px;
 
              &.active{
                 color:$gray-900;
+                background-color:lighten($cogent,45%);
+                @include border-radius(4px);
+                padding:0 2px;
              }
          }
      }
@@ -101,7 +105,7 @@
     color:$gray-700;
     font-size:0.8rem;
     text-transform: capitalize;
-    letter-spacing: 0.02rem;
+    letter-spacing: 0.01rem;
     width:100%;
 
     //  &::before{
@@ -117,9 +121,9 @@
    
 
     span{
-        font-size: 0.9rem;
+        font-size: 0.8rem;
         font-weight: 600;
-        letter-spacing: 0.02rem;
+        letter-spacing: 0.01rem;
     }
    
 }
@@ -137,7 +141,7 @@
     
 
    .label{
-       font-size:0.7rem;
+       font-size:0.65rem;
        font-weight:400;
        line-height: 1rem;
    }
@@ -222,7 +226,7 @@
         content:"";
         display: block;
         position: absolute;
-        width:55%;
+        width:25%;
         height:1px;
         bottom:-5px;
         background-color:$gray-600;
@@ -234,7 +238,7 @@
 
 .day-off{
     // width:100%;
-    text-align: center;
+    // text-align: center;
     display: inline-block;
 
     .fa{
