--- a/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
+++ b/packages/apps/admin/src/container/AppointmentStatus/appointment-status.scss
@@ -42,13 +42,13 @@
              color:$gray-600;
              font-weight: 500;
              margin-left:4px;
-             padding:0 2px;
+             padding:2px 6px;
 
              &.active{
                 color:$gray-900;
                 background-color:lighten($cogent,45%);
                 @include border-radius(4px);
-                padding:0 2px;
+                padding:2px 6px;
              }
          }
      }
