--- a/packages/common-sass-client/src/scss/_custom-components.scss
+++ b/packages/common-sass-client/src/scss/_custom-components.scss
@@ -1,4 +1,5 @@
 @import "./custom-components/aggrid";
+@import "./custom-components/aggrid-multiline-column";
 @import "./custom-components/aggrid-action";
 @import "./custom-components/custom-scrollbar";
 @import "./custom-components/expandible-search";
