--- a/packages/common-sass-client/src/scss/_topbar.scss
+++ b/packages/common-sass-client/src/scss/_topbar.scss
@@ -58,7 +58,7 @@
             margin-bottom      : 20px;
             text-align         : center;
 
-         
+
 
 
         }
@@ -75,7 +75,7 @@
                 display       : flex;
 
                 &:hover {
-                    background-color: $gray-200;
+                   background-color: lighten($cogent,45%);
                     color           : $cogent;
                 }
 
@@ -93,11 +93,21 @@
     }
 
     .topbar-search {
+ 
         margin-right: 4px;
-
+        
         .dropdown-menu {
             width        : 300px;
-        
+            top          : -6px;
+            // max-height  :420px;
+            // overflow: auto;
+
+            .menu-list-container{
+                max-height  :428px;
+                overflow: auto;
+            }
+
+
                 &:before {
                     content      : '';
                     width        : 0;
@@ -109,12 +119,26 @@
                     display      : block;
                     top          : -6px;
                     left           :110px;
-                    
+
                 }
-          
+
+
+            .dropdown-item{
+                &:focus{
+                   background-color: lighten($cogent,40%);
+                }
+
+                &:hover{
+                    background-color: lighten($cogent,45%);
+
+                }
+
+
+            }
+
 
             li{
-                padding:14px ; 
+                padding:14px ;
                 height: auto ;
             }
         }
@@ -123,42 +147,46 @@
         .menu-link{
             display: flex;
             flex-direction: row;
+            padding-top:12px;
+            padding-bottom:12px;
+
             &:hover{
                 text-decoration: none;
             }
-          
+
             .anchor-icon{
               width:32px;
               height: 32px;
               line-height: 32px;
               text-align: center;
+              flex-shrink: 0;
               @include border-radius(50%);
               border:1px solid $gray-100;
               background-color:$gray-200;
             }
-          
+
             .menu-box{
-              margin-left:10px;
+              margin-left:14px;
               .menu{
                 font-size:13px;
                 font-weight: 500;
                 color:$gray-800;
               }
-          
+
               .sub-menu{
                 font-size:12px;
                 font-weight: 400;
                 color:$gray-700;
               }
             }
-          
+
           }
-     
+
 
 
     }
 
-  
+
 
     // for profile details
 
@@ -169,7 +197,7 @@
 
         &>.btn {
 
-            width: 45px;
+            // width: 45px;
         }
 
         .avatar {
@@ -186,8 +214,8 @@
 
         .dropdown-toggle {
             @include border-radius(50px);
-            -webkit-transition: all .3s;
-            transition        : all .3s;
+            -webkit-transition: all 0.3s;
+            transition        : all 0.3s;
 
             &:hover {
                 background-color: lighten($cogent, 45%);
@@ -197,7 +225,7 @@
 
         .dropdown-menu {
             width           : 220px;
-            
+
             min-width       : auto;
             border          : none;
             //box-shadow      : 1px 1px 8px 1px $gray-300;
@@ -229,7 +257,7 @@
                 font-weight  : 600;
                 margin-bottom: 0px;
                 text-transform:capitalize;
-            
+
             }
 
             .depart-name ,.profile-name{
@@ -241,8 +269,8 @@
                 span{
                     color:$gray-600;
                 }
-               
-             
+
+
             }
 
             .depart-name{
@@ -250,16 +278,16 @@
             }
 
             .profile-name {
-               
+
                 margin-bottom: 4px;
-               
+
             }
 
-           
+
 
             .reset-password {
                 display: none;
-          
+
             }
 
         }
@@ -267,7 +295,7 @@
         .user-logout {
             border-top: 1px solid $cogent-border;
             padding   : 5px 0 5px 15px;
-           
+
 
             .btn {
                 @include border-radius(5px);
