date picker issu

--- a/packages/common-sass/src/scss/_custom-components.scss
+++ b/packages/common-sass/src/scss/_custom-components.scss
@@ -6,5 +6,6 @@
 @import "./custom-components/hybrid-input";
 @import "./custom-components/hybrid-select";
 @import "./custom-components/perfect-scrollbar";
+@import "./custom-components/react-datepicker";
 @import "./custom-components/searchable-select";
 
