date picker merge

--- a/packages/common-sass-client/src/scss/custom-components/_react-datepicker.scss
+++ b/packages/common-sass-client/src/scss/custom-components/_react-datepicker.scss
@@ -18,7 +18,7 @@ $datepicker__selected-color: red !important;
 }
 
 .react-datepicker-popper[data-placement^="bottom"]{
-    // margin-top:24px !important;
+    margin-top:-28px !important;
 }
 
 
