--- a/packages/common-sass-client/src/scss/_custom-components.scss
+++ b/packages/common-sass-client/src/scss/_custom-components.scss
@@ -4,6 +4,7 @@
 @import "./custom-components/custom-scrollbar";
 @import "./custom-components/expandible-search";
 @import "./custom-components/hybrid-input";
+@import "./custom-components/react-datepicker";
 @import "./custom-components/hybrid-select";
 @import "./custom-components/perfect-scrollbar";
 @import "./custom-components/searchable-select";
