--- a/packages/common-sass-client/src/scss/custom-components/_aggrid.scss
+++ b/packages/common-sass-client/src/scss/custom-components/_aggrid.scss
@@ -115,7 +115,7 @@ body {
 }
 
 .ag-cell {
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 
 //   .ag-theme-balham .ag-ltr .ag-cell
