--- a/packages/common-sass/src/scss/custom-components/_aggrid-multiline-column.scss
+++ b/packages/common-sass/src/scss/custom-components/_aggrid-multiline-column.scss
@@ -1,3 +1,14 @@
+
+ @import '~bootstrap/scss/functions';
+
+ //custom colors
+ @import "~@frontend-appointment/common-sass/src/scss/variables/custom-variables";
+
+// // Customized Bootstrap variables
+ @import "~@frontend-appointment/common-sass/src/scss/variables/custom-bootstrap-variable";
+ @import '~bootstrap/scss/mixins';
+
+
 .ag-root-wrapper{
     .patient-column, .doctor-column{
         margin-top:0.1rem;
@@ -6,6 +17,12 @@
          li{
             line-height: 1.4rem;
             padding:0;
+            span{
+                border:1px solid $gray-400;
+                background-color:$gray-100;
+                padding:3px;
+                @include border-radius(4px);
+            }
         }
     }
 
