--- a/packages/apps/client/src/container/ClientAppointmentStatus/appointment-status.scss
+++ b/packages/apps/client/src/container/ClientAppointmentStatus/appointment-status.scss
@@ -174,7 +174,8 @@
   
       }
       .time{
-          float:right;
+        //   float:right;
+        margin-left:30px;   
       }
   
       ul {
