--- a/packages/common-sass-client/src/scss/_topbar.scss
+++ b/packages/common-sass-client/src/scss/_topbar.scss
@@ -205,6 +205,7 @@
             height        : auto;
             // margin-left: 5px;
             @include border-radius(50px);
+         
         }
 
         i {
@@ -213,12 +214,23 @@
         }
 
         .dropdown-toggle {
-            @include border-radius(50px);
+            @include border-radius(50%);
             -webkit-transition: all 0.3s;
             transition        : all 0.3s;
+            padding:1px;
+            text-align: center;
+            width:44px;
 
             &:hover {
                 background-color: lighten($cogent, 45%);
+            }
+
+            .avatar {
+                width         :40px;
+                height        : 40px;
+                
+               
+                @include border-radius(50%);
             }
         }
 
