--- a/packages/common-sass-client/src/scss/custom-components/_aggrid.scss
+++ b/packages/common-sass-client/src/scss/custom-components/_aggrid.scss
@@ -119,9 +119,9 @@ body {
   outline: none;
 }
 
-.ag-cell {
-  text-transform: capitalize;
-}
+// .ag-cell {
+//   text-transform: capitalize;
+// }
 
 //   .ag-theme-balham .ag-ltr .ag-cell
 
