--- a/packages/common-sass/src/scss/_topbar.scss
+++ b/packages/common-sass/src/scss/_topbar.scss
@@ -235,7 +235,7 @@
 
         .dropdown-menu {
             width           : 220px;
-
+            margin-top:10px;
             min-width       : auto;
             border          : none;
             //box-shadow      : 1px 1px 8px 1px $gray-300;
