--- a/packages/ui-elements/src/CHybridTimePicker/hybrid-time.scss
+++ b/packages/ui-elements/src/CHybridTimePicker/hybrid-time.scss
@@ -1,108 +1,36 @@
-
-.field-wrapper {
+.select-wrapper{
   position: relative;
-  min-height: 64px;
-
-  &#fieldWrapperprofile-description {
-    min-height: 88px;
+  &:hover{
+    cursor: pointer;
   }
-}
-
-
-.field-wrapper input {
-  border: 1px solid #DADCE0;
-  // padding: 15px;
-  border-radius: 4px;
-  //  height: 38px;
-
-  &:hover {
-    border: 1px solid #000;
-  }
-}
-
-.hinput .form-control {
-  height: 38px;
-}
-
-.field-wrapper .field-placeholder {
-  font-size: 0.8rem;
-  line-height: 1rem;
+.select-label {
+  // color: #80868b;
   position: absolute;
-  top: 9px;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  color: #80868b;
-  left: 8px;
-  padding: 0 8px;
-  -webkit-transition: transform 150ms cubic-bezier(0.4, 0, 0.2, 1), opacity 150ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 150ms cubic-bezier(0.4, 0, 0.2, 1), opacity 150ms cubic-bezier(0.4, 0, 0.2, 1);
-  z-index: 1;
-  text-align: left;
+  top: -8px;
+  left: 12px;
+  z-index: 2;
+  background-color: white;
+ font-size:0.65rem;
+  padding:0 5px;
+ 
 }
 
-.field-wrapper .field-placeholder span {
-  background: #ffffff;
-  padding: 0px 5px;
-  margin-top: 2px;
+.select-label.active {
+   color: #1A73E8;
 }
-
-.field-wrapper.myInput input:not([disable]) ~ .field-placeholder {
-  color: #1A73E8;
-  -webkit-transform: scale(1) translateY(-18px) translateX(-6px);
-  transform: scale(1) translateY(-18px) translateX(-6px);
-  font-size: 0.6rem;
-}
-
-.field-wrapper.errorInput input:not([disable]) ~ .field-placeholder {
-  color: #dc3545;
-}
-
-.field-wrapper.hasValue input:not([disabled]) ~ .field-placeholder {
-  -webkit-transform: scale(1) translateY(-18px) translateX(-6px);
-  transform: scale(1) translateY(-18px) translateX(-6px);
-  font-size: 0.65rem;
-
-}
-
-.field-wrapper.hasValue input:disabled ~ .field-placeholder {
-  -webkit-transform: scale(1) translateY(-18px) translateX(-6px);
-  transform: scale(1) translateY(-18px) translateX(-6px);
-  font-size: 0.65rem;
-}
-
-.field-wrapper .err-message {
-  display: inline-block;
-  margin-top: 0;
-}
-
-//for text area
-.field-wrapper textarea {
-  border: 1px solid #DADCE0;
-  // padding: 15px;
-  border-radius: 4px;
-}
-
-.field-wrapper.myInput textarea:not([disable]) ~ .field-placeholder {
-  color: #1A73E8;
-  -webkit-transform: scale(1) translateY(-18px) translateX(-6px);
-  transform: scale(1) translateY(-18px) translateX(-6px);
-  font-size: 0.65rem;
-}
-
-.field-wrapper.errorInput textarea:not([disable]) ~ .field-placeholder {
-  color: #e0b4b4;
-}
-
-.field-wrapper.hasValue textarea:not([disabled]) ~ .field-placeholder {
-  -webkit-transform: scale(1) translateY(-18px) translateX(-6px);
-  transform: scale(1) translateY(-18px) translateX(-6px);
-  font-size: 0.6rem;
-}
-
-.field-wrapper.hasValue textarea:disabled ~ .field-placeholder {
-  -webkit-transform: scale(1) translateY(-18px) translateX(-6px);
-  transform: scale(1) translateY(-18px) translateX(-6px);
-  font-size: 0.6rem;
+.css-yk16xz-control{
+  &:hover{
+    cursor: pointer;
+  }
 }
 
 
+
+ .css-1hwfws3{
+  padding:0 1.1rem;
+}
+
+.css-26l3qy-menu {
+  z-index: 3;
+}
+}
