--- a/packages/common-sass/src/scss/pages/_dashboard.scss
+++ b/packages/common-sass/src/scss/pages/_dashboard.scss
@@ -24,6 +24,10 @@
     //     }
     // }
 
+    .react-datepicker-popper[data-placement^="bottom"] {
+        margin-top: -8px !important;
+    }
+
     .fiscal{
         font-size: 11px;
         font-weight: 500;
